--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -4,3 +4,8 @@
 <h1>sdfsfsdfsf</h1>
 <h1>sdfsfsdfsf</h1>
 <h1>sdfsfsdfsf</h1>
+{% for i in list%}
+	<!-- <h1>{{i.Subtitle}}</h1> -->
+	<!-- <h1>{{i.title}}</h1> -->
+	<h1>{{i}}</h1>
+{% endfor %}
