--- a/flaskblog/templates/article.html
+++ b/flaskblog/templates/article.html
@@ -26,7 +26,7 @@
 </div>
 <header>
 	<a href="" target="_blank"
-		><img src="../static/images/rock_03.png" alt="Logo"
+			   ><img src="../static/images/rocklogo.svg" height="80px" alt="Logo"
 	/></a>
 
 	<ul class="mmenu">
