--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -7,6 +7,24 @@
 
 	<body>
 		<link rel="stylesheet" href="../static/css/styleA.css" media="all" />
+		<link rel="stylesheet" href="../static/css/article.css" media="all" />
+		<div class="menu-wrap">
+	<div class="logo">logo</div>
+	<input type="checkbox" class="toggler" />
+	<div class="hamburger"><div></div></div>
+	<div class="menu">
+		<div>
+			<div>
+				<ul>
+					<li><a href="#">首页</a></li>
+					<li><a href="#">关于本站</a></li>
+					<li><a href="#">Top 10 most wished Books</a></li>
+					<li><a href="#">加入</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+		</div>
 		<header>
 			<nav>
 				<img
@@ -40,6 +58,7 @@
 				</div>
 			</section>
 		</header>
+
 		<div class="slider"></div>
 
 		<div class="why">
