--- a/flaskblog/static/css/styleA.css
+++ b/flaskblog/static/css/styleA.css
@@ -1,20 +1,145 @@
 
-		@media only screen and (max-width: 768px) {
-		
-				.menu-wrap {
-					display: block;
-                    position:fixed;
-                 width: 100%;
-                 background:white;
-    height: 4rem;
+
+			.menu-wrap {
+			     margin:0;
+				z-index: 1;
+			}
+
+			.menu-wrap .toggler {
+				position: absolute;
 				top: 0;
 				left: 0;
-				}
-				header {
-					display: none;
-				}
-			
+				z-index: 2;
+				cursor: pointer;
+				width: 50px;
+				height: 50px;
+				opacity: 0;
 			}
+
+			.menu-wrap .hamburger {
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 1;
+				width: 2rem;
+				height: 2rem;
+				padding: 1rem;
+				background:rgba(0,9,9,.4) ;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			/* Hamburger Line */
+			.menu-wrap .hamburger > div {
+				position: relative;
+				flex: none;
+				width: 100%;
+				height: 2px;
+				background: #fff;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				transition: all 0.4s ease;
+			}
+
+			/* Hamburger Lines - Top & Bottom */
+			.menu-wrap .hamburger > div::before,
+			.menu-wrap .hamburger > div::after {
+				content: "";
+				position: absolute;
+				z-index: 1;
+				top: -10px;
+				width: 100%;
+				height: 2px;
+				background: inherit;
+			}
+
+			/* Moves Line Down */
+			.menu-wrap .hamburger > div::after {
+				top: 10px;
+			}
+
+			/* Toggler Animation */
+			.menu-wrap .toggler:checked + .hamburger > div {
+				transform: rotate(135deg);
+			}
+
+			/* Turns Lines Into X */
+			.menu-wrap .toggler:checked + .hamburger > div:before,
+			.menu-wrap .toggler:checked + .hamburger > div:after {
+				top: 0;
+				transform: rotate(90deg);
+			}
+
+			/* Rotate On Hover When Checked */
+			.menu-wrap .toggler:checked:hover + .hamburger > div {
+				transform: rotate(225deg);
+			}
+
+			/* Show Menu */
+			.menu-wrap .toggler:checked ~ .menu {
+				visibility: visible;
+			         background: rgba(15,49,88,.7);
+			}
+
+			.menu-wrap .toggler:checked ~ .menu > div {
+				transform: scale(1);
+				transition-duration: var(--menu-speed);
+			}
+
+			.menu-wrap .toggler:checked ~ .menu > div > div {
+				opacity: 1;
+				transition: opacity 0.4s ease 0.4s;
+			}
+
+			.menu-wrap .menu {
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				visibility: hidden;
+				overflow: hidden;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			.menu-wrap .menu > div {
+				background: var(--overlay-color);
+				border-radius: 50%;
+				width: 200vw;
+				height: 200vw;
+				display: flex;
+				flex: none;
+				align-items: center;
+				justify-content: center;
+				transform: scale(0);
+				transition: all 0.4s ease;
+			}
+
+			.menu-wrap .menu > div > div {
+				text-align: center;
+				max-width: 90vw;
+				max-height: 100vh;
+				opacity: 0;
+				transition: opacity 0.4s ease;
+			}
+
+			.menu-wrap .menu > div > div > ul > li {
+				list-style: none;
+			       color: white;
+			 padding: 3rem;
+			 background: rgba(22,22,22,.4);
+			}
+
+			.menu-wrap .menu > div > div > ul > li > a {
+				color: inherit;
+				text-decoration: none;
+				transition: color 0.4s ease;
+			}
+
 
 		 .c-left ul {
 			 margin: 0rem;
@@ -339,8 +464,45 @@ ul.hot_topics,li {
 	color:white
 }
 
+		@media only screen and (max-width: 788px) {
+		
+            .myhead{
+                display
+ :none;           }
+				header {
+					display: none;
+				}
+				.menu-wrap {
+                display: block;
+                position:fixed;
+                 width: 100%;
+                 background:white;
+                height: 4rem;
+				top: 0;
+				left: 0;
+				}
+			
+			} 
+            /* end media */
 
-
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+    header{
+        display:none
+    }
+    .hot_topics{
+        min-width:0
+    }
+    .hot_topics li {
+        flex:0 100%;
+    }
+    .panel_postopen {
+            grid-template-columns: 1fr;
+            column-gap: 0rem;
+    }
+}
 
 
 
