--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -115,9 +115,6 @@
 								<img src="../static/images/backgroundimg.jpg" alt="" />
 								饮食营养预防Virus
 							</a>
-							<!-- <a href="#"> -->
-							<!-- 	<img src="hbz&#45;10&#45;experts&#45;dream&#45;vacations&#45;8&#45;gettyimages&#45;569665535.jpg" alt=""> -->
-							<!-- what are u doing? 	</a> -->
 						</div>
 					</div>
 					<div class="gallery_pos_info">
@@ -133,7 +130,7 @@
 				<ul class="hot_topics">
 					{% for u in list%}
 					<li>
-						<a href="">
+						<a href="{{url_for('main.article',aid=2)}}">
 							<img
 								width="100"
 								height="100"
@@ -152,18 +149,6 @@
 					{% endfor %}
 				</ul>
 				<p><button class="more">查看更多</button></p>
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-
-				<h1>s2sdfsdf</h1>
 			</div>
 			<div class="panel_right">
 				<div>
