--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -1,11 +1,13 @@
-<h1>sdfsfsdfsf</h1>
-<h1>sdfsfsdfsf</h1>
-<h1>sdfsfsdfsf</h1>
-<h1>sdfsfsdfsf</h1>
-<h1>sdfsfsdfsf</h1>
-<h1>sdfsfsdfsf</h1>
-{% for i in list%}
-<!-- <h1>{{i.Subtitle}}</h1> -->
-<!-- <h1>{{i.title}}</h1> -->
-<h1>{{ i }}</h1>
-{% endfor %}
+{% extends 'admin/master.html' %}
+{% block body %}
+{{ super() }}
+<div class="container">
+    <div class="row">
+        <h1>Flask-CKEditor Demo: Flask-Admin Image Upload</h1>
+        <p>
+            This example shows how to add CKEditor support with Flask-CKEditor.
+        </p>
+        <a class="btn btn-primary" href="/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+    </div>
+</div>
+{% endblock body %}
