--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -130,7 +130,7 @@
 				<ul class="hot_topics">
 					{% for u in list%}
 					<li>
-						<a href="{{url_for('main.article',aid=2)}}">
+						<a href="{{url_for('main.article',aid=u.id)}}">
 							<img
 								width="100"
 								height="100"
