--- a/flaskblog/static/css/styleA.css
+++ b/flaskblog/static/css/styleA.css
@@ -1,4 +1,44 @@
+.dropdown {
+    display: none;
+text-align: left;
+    padding: 17px;
+}
+			.mmenu {
+				display: inline-flex;
+				color: green;
+			}
 
+			.mmenu > li {
+				padding: 0.5rem 0rem;
+				margin-right: 2rem;
+				position: relative;
+			}
+			.mmenu .active,
+			.mmenu li:hover {
+				text-decoration: none;
+				color: black;
+			}
+
+			.mmenu li:hover .dropdown {
+				position: absolute;
+				margin-top: 7px;
+				margin-left: -16px;
+				height: 8rem;
+				background: #ccc;
+				width: 20rem;
+				display: block;
+			}
+			.mmenu li a {
+				text-decoration: none;
+				color: white !important;
+			}
+
+			.mmenu li:hover .dropdown ul {
+				padding: none;
+				margin: none;
+				height: 9rem;
+				display: block;
+			}
 
 			.menu-wrap {
 				display: none;
@@ -8,8 +48,8 @@
 
 			.menu-wrap .toggler {
 				position: absolute;
-				top: 0;
-				left: 0;
+				top: 1rem;
+				right: 1rem;
 				z-index: 2;
 				cursor: pointer;
 				width: 50px;
@@ -20,7 +60,7 @@
 			.menu-wrap .hamburger {
 				position: absolute;
 				top: 0;
-				left: 0;
+			right: 1rem;
 				z-index: 1;
 				width: 2rem;
 				height: 2rem;
@@ -35,7 +75,7 @@
 			.menu-wrap .hamburger > div {
 				position: relative;
 				flex: none;
-				width: 100%;
+				width: 1rem;
 				height: 2px;
 				background: #fff;
 				display: flex;
@@ -217,7 +257,7 @@ section.navlink{
     z-index: 5;
 	   left: 50%;
     transform: translate(-50%, 0);
-    top: 4rem;
+    top: 3rem;
 }
 .navlink.sticky{
 	display: none;
@@ -426,7 +466,7 @@ line-height: 1rem;
 }
 ul.hot_topics,li {
 	list-style: none;
-	padding: 1rem 0;
+	padding: .2rem 0;
 }
 .hot_topics li img {
 	float: left;
@@ -481,11 +521,7 @@ ul.hot_topics,li {
     }
 		}
 		@media only screen and (max-width: 788px) {
-		
-            .myhead{
-                display
- :none;           }
-				header {
+				.gallery_pos_info , .slider, header {
 					display: none;
 				}
 				.menu-wrap {
@@ -505,7 +541,7 @@ ul.hot_topics,li {
   and (min-device-width: 375px) 
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
-    header{
+    header,.gallery_pos_info{
         display:none
     }
 	.menu-wrap {
