--- a/flaskblog/static/css/styleA.css
+++ b/flaskblog/static/css/styleA.css
@@ -1,3 +1,6 @@
+p,a{
+	font-size: .8rem;
+}
 .dropdown {
     display: none;
 text-align: left;
@@ -24,9 +27,12 @@ text-align: left;
 				margin-top: 7px;
 				margin-left: -16px;
 				height: 8rem;
-				background: #ccc;
 				width: 20rem;
 				display: block;
+				    background: #fbfafa;
+    border: 5px solid #fff;
+    border-top: 0;
+    box-shadow: 0 2px 22px 0 rgba(0,0,0,.11), 0 4px 5px 0 rgba(0,0,0,.22);
 			}
 			.mmenu li a {
 				text-decoration: none;
@@ -427,18 +433,20 @@ top: 6rem
   left: 0;
   right: 0;
   z-index: 1;
-  background: #000;
+  background: rgb(108,42,70);
+    background: radial-gradient(circle, rgba(108,42,70,1) 0%, rgba(85,120,161,1) 97%);
   width: 100%;
   height:74%;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
 }
 
 .gallery_desc {
 line-height: 1rem;
+    padding: 1rem .4rem 3rem;
+    background: black;
+    font-size: 0.8rem;
+    border-radius: 4px;
+    letter-spacing: 3px;
+    text-indent: 1rem;
 }
 .panel_right {
 	padding:1rem;
@@ -462,7 +470,6 @@ line-height: 1rem;
 	display: flex;
 	flex-wrap: wrap;
 	min-width: 537px;
-    background: rgba(100,100,100,.1);
 }
 ul.hot_topics,li {
 	list-style: none;
@@ -480,12 +487,12 @@ ul.hot_topics,li {
 	  
 	  width: 100%;
 }
+.hot_topics li a img {}
 .hot_topics li div.li-content {
 	    display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: stretch;
     min-height: 4.9375rem;
-	padding:1.1rem 0
 }
 .hot_topics li:hover div.li-content h3 { 
 	color:lightblue;
