--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -18,8 +18,7 @@
 				<img
 					id="logo"
 					src="../static/images/rocklogo.svg"
-					width="180"
-					height="90"
+					height="50px"
 					alt="logoimage"
 				/>
 			</div>
@@ -137,8 +136,8 @@
 		</div>
 		<div class="panel_postopen">
 			<div class="panel_left">
-				<h3 class="gallery_headline">本站videos</h3>
 				<div class="photo_gallery">
+				<h3 class="gallery_headline">本站videos</h3>
 					<div class="gallery_img">
 						<img src="../static/images/gallery.jpg" alt="" />
 						<div class="sub_img">
