--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -28,10 +28,18 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="#">首页</a></li>
-							<li><a href="#">关于本站</a></li>
-							<li><a href="#">Top 10 most wished Books</a></li>
-							<li><a href="#">加入</a></li>
+							<li><a href="#">营养&维生素</a>
+								<ol>
+									<li>宝宝营养</li>
+								</ol>
+							</li>
+							<li><a href="#">健康&长寿</a></li>
+							<li><a href="#">家庭&孕妈</a></li>
+							<li><a href="#">新闻&专家</a>
+							<ol>
+									<li>宝宝营养</li>
+							</ol>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -192,7 +200,6 @@
 					</li>
 					{% endfor %}
 				</ul>
-				<p><button class="more">查看更多</button></p>
 			</div>
 			<div class="panel_right">
 				<div>
