--- a/flaskblog/templates/newhome.html
+++ b/flaskblog/templates/newhome.html
@@ -126,6 +126,8 @@
 		<div class="slider"></div>
 
 		<div class="why">
+			<img src="./492x355.jpg" alt="bitch 366">
+			<h1>bitch images</h1>
 			<h1 class="why_headline">热议话题</h1>
 			<div class="answer_info">
 				<a href="">
